update index_types set indexer_class='cinnamon.index.indexer.DescendingReverseCompleteStringIndexer' where name='xpath.descending_reverse_complete_string_indexer';
update index_types set indexer_class='cinnamon.index.indexer.DescendingReverseStringIndexer' where name='xpath.descending_reverse_string_indexer';
update index_types set indexer_class='cinnamon.index.indexer.DefaultIndexer' where name='xpath.string_indexer';
update index_types set va_provider_class = 'cinnamon.index.valueAssistance.DefaultProvider';

alter table change_triggers rename column command to action;
alter table change_triggers add column controller character varying(255) not null default 'cinnamon';
update change_trigger_types set trigger_class='cinnamon.trigger.impl.RelationChangeTrigger';

alter table lifecycle_states add column life_cycle_state_for_copy_id bigint;
--- test insert:
insert into change_triggers values(6,true,0,100,1,'newVersion',true,true,'<config />', 'osd');

update lifecycle_states set state_class='cinnamon.lifecycle.state.NopState' where state_class like '%NopState';
update lifecycle_states set state_class='cinnamon.lifecycle.state.ChangeAclState' where state_class like '%ChangeAclState';

--- update relation resolvers:
update relation_resolvers set class_name = 'cinnamon.relation.resolver.FixedRelationResolver' where name='FixedRelationResolver';
update relation_resolvers set class_name = 'cinnamon.relation.resolver.LatestBranchResolver' where name='LatestBranchResolver';
update relation_resolvers set class_name = 'cinnamon.relation.resolver.LatestHeadResolver' where name='LatestHeadResolver';

update change_trigger_types set trigger_class='cinnamon.trigger.impl.LifecycleStateAuditTrigger' where trigger_class like '%LifecycleStateAuditTrigger';

--- the references to LifeCycle are turned into life_cycle because of camel case:
alter table lifecycle_states rename lifecycle_id to life_cycle_id;
alter table lifecycle_states alter column life_cycle_id drop NOT NULL;